--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,15 @@ before_install:
 script: 
    - docker run -e CI=true praveen/docker-react npm run test -- --coverage
  
-
+deploy:
+   provider: elasticbeanstalk
+   region: "us-east-1"
+   app: "docker-react"
+   env: "Dockerreact-env"
+   bucket_name: "elasticbeanstalk-us-east-1-685754223027"
+   bucket_path: "docker-react"
+   on:
+     branch: main
+   
 
   
