--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ deploy:
    bucket_path: "docker-react"
    on:
      branch: main
-   access_key_id: "$AWS_KEY"
+   access_key_id: 
+     secure: "$AWS_KEY"
    secret_access_key:
       secure: "$SECRET"    
 
