--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ deploy:
    on:
      branch: main
    access_key_id: 
-     secure: "$AWS_KEY"
+     secure: $ACCESS_KEY_ID
    secret_access_key:
-      secure: "$SECRET"    
+      secure: $AWS_SECRET    
 
   
