--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
    access_key_id: 
      secure: "$ACCESS_KEY_ID"
    secret_access_key:
-      secure: $AWS_SECRET    
+      secure: "$AWS_SECRET"    
 
   
